--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,18 @@
 [versions]
 agp = "8.9.1"
-kotlin = "2.0.21"
+kotlin = "2.1.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
-composeBom = "2024.09.00"
+composeBom = "2025.05.01"
 kspVersion = "2.1.21-2.0.1"
 hiltVersion = "2.56.2"
-coroutinesVersion = "1.5.2"
+coroutinesVersion = "1.7.3"
+coilComposeVersion = "1.3.2"
+hiltNavigationComposeVersion = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,10 +37,9 @@ okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor",
 timber = { group = "com.jakewharton.timber", name = "timber", version = "4.7.1" }
 coroutines-core = { group = 'org.jetbrains.kotlinx', name = 'kotlinx-coroutines-core', version.ref = 'coroutinesVersion' }
 coroutines-android = { group = 'org.jetbrains.kotlinx', name = 'kotlinx-coroutines-android', version.ref = 'coroutinesVersion' }
-coil = { group = "io.coil-kt", name = "coil", version = "1.1.1" }
-accompanist-coil = { group = "com.google.accompanist", name = "accompanist-coil", version = "0.7.0" }
-hilt-lifecycle-viewmodel = { module = 'androidx.hilt:hilt-lifecycle-viewmodel', version = '1.0.0-alpha03' }
-hilt-navigation-compose = { module = 'androidx.hilt:hilt-navigation-compose', version = '1.0.0-alpha01' }
+coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilComposeVersion" }
+#accompanist-coil = { group = "com.google.accompanist", name = "accompanist-coil", version = "0.10.0" }
+hilt-navigation-compose = { module = 'androidx.hilt:hilt-navigation-compose', version.ref = 'hiltNavigationComposeVersion' }
 hilt-android = { group = "com.google.dagger", name = "hilt-android" , version.ref = "hiltVersion"}
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler" , version.ref = "hiltVersion"}
 palette = { group = 'androidx.palette', name = "palette", version = '1.0.0' }
