--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ composeBom = "2025.05.01"
 kspVersion = "2.1.21-2.0.1"
 hiltVersion = "2.56.2"
 coroutinesVersion = "1.7.3"
-coilComposeVersion = "1.3.2"
+coilComposeVersion = "2.+"
 hiltNavigationComposeVersion = "1.2.0"
 
 [libraries]
